[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Node2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/koekiemonster2.png" type="Texture" id=2]
[ext_resource path="res://sprites/achtergrondgame.png" type="Texture" id=3]
[ext_resource path="res://sprites/ARIBLK.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/chocomelk.png" type="Texture" id=5]
[ext_resource path="res://sprites/kwijl.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 2
outline_color = Color( 0.396078, 0.666667, 0.443137, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 2
outline_color = Color( 0.396078, 0.666667, 0.443137, 1 )
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="canvas"]
position = Vector2( 512, 301 )
scale = Vector2( 0.531771, 0.555093 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="canvas"]
margin_left = 344.0
margin_top = 260.0
margin_right = 692.0
margin_bottom = 605.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="canvas"]
margin_left = 489.0
margin_top = 224.0
margin_right = 616.0
margin_bottom = 266.0
custom_fonts/normal_font = SubResource( 1 )
text = " points"

[node name="Label" type="Label" parent="canvas"]
margin_left = 883.0
margin_top = 21.0
margin_right = 950.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Shop"

[node name="Label2" type="Label" parent="canvas"]
margin_left = 830.0
margin_top = 212.0
margin_right = 1040.0
margin_bottom = 252.0
rect_scale = Vector2( 0.74, 0.74 )
custom_fonts/font = SubResource( 2 )
text = "+ 5 per click
cost: 10 cookies"

[node name="TextureButton2" type="TextureButton" parent="canvas"]
margin_left = 885.0
margin_top = 63.0
margin_right = 958.0
margin_bottom = 223.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="canvas"]
visible = false
position = Vector2( 500, 376 )
scale = Vector2( 0.527083, 0.286298 )
texture = ExtResource( 6 )

[connection signal="pressed" from="canvas/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="canvas/TextureButton2" to="." method="_on_TextureButton2_pressed"]
